apps/cxs-mimir-api/base/mimir-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cxs-mimir-api
spec:
  selector:
    matchLabels:
      app: cxs-mimir-api
      tier: api
  template:
    metadata:
      labels:
        app: cxs-mimir-api
        tier: api
    spec:
      containers:
        - name: node
          image: quicklookup/cxs-mimir-api # Image tag managed in overlays/*/kustomization.yaml
          resources:
            requests:
              cpu: 1000m
              memory: 1200Mi
          volumeMounts:
            - name: ephemerala
              mountPath: /usr/local/share/fonts
            - name: ephemeralb
              mountPath: /cache
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              port: 8000
              path: /gpt-api/status/alive
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 4
          readinessProbe:
            httpGet:
              port: 8000
              path: /gpt-api/status/ready
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 9
            failureThreshold: 6
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: ephemerala
          emptyDir:
            sizeLimit: 5Gi
        - name: ephemeralb
          emptyDir:
            sizeLimit: 5Gi
