apps/cxs-mimir-api/base/mimir-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: cxs-mimir-api
  namespace: solutions
spec:
  rules:
  - host: agents.contextsuite.com
    http:
      paths:
      - backend:
          service:
            name: cxs-mimir-api
            port:
              number: 8000
        path: /gpt-api
        pathType: Prefix
  tls:
  - hosts:
    - agents.contextsuite.com
    secretName: agents-contextsuite-com-tls
